--- a/src/components/addNewBook/AddNewBook.css
+++ b/src/components/addNewBook/AddNewBook.css
@@ -29,6 +29,7 @@ input {
   background-color: #1590fd;
   color: white;
   border: none;
+  width: 20%;
 }
 
 .div-new {
@@ -42,10 +43,37 @@ input {
   margin-bottom: 20px;
 }
 
-.new-button {
+.div-new-inner {
+  display: flex;
+  flex-direction: column;
   width: 20%;
+  height: 100px;
+  justify-content: space-between;
+}
+
+.div-new-inner-button {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  justify-content: space-between;
+}
+
+.new-link {
+  width: 20%;
+  color: #1590fd;
+}
+
+.new-link:hover {
+  cursor: pointer;
 }
 
 .category {
   color: #1590fd;
+}
+
+.chapterButton {
+  background-color: #1590fd;
+  color: white;
+  border: none;
+  padding: 5px;
 }
