--- a/src/components/addNewBook/AddNewBook.css
+++ b/src/components/addNewBook/AddNewBook.css
@@ -6,6 +6,9 @@
 .book-list-heading {
   margin-bottom: 20px;
   color: gray;
+  border-top: 1px solid lightgray;
+  margin-top: 40px;
+  padding-top: 20px;
 }
 
 form {
